--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-# Welcome My portfolio
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Sk. Amir Hamza</title>
+		<link rel="stylesheet" type="text/css" href="asset/css/style.css">
+		<script type="text/javascript" src="asset/js/script.js"></script>
+		<style type="text/css">
+			body{
+  				background-image: url("asset/img/bg.png");
+			}
+		</style>
+	</head>
+	<body>
+		<div class="container">
+			<div class="cover shadow-lg bg-white">
+				<div class="cover-bg p-3 p-lg-4 text-white" style="height: 200px;">
+					<div class="row">
+						<div class="col-lg-4 col-md-5">
+							<div class="pl-4 pt-1"><img class="img-thumbnail" style="border-radius: 100%" src="asset/img/hamza.jpeg" width="220" height="220"></div>
+						</div>
+						<div class="col-lg-8 col-md-7 text-md-start pt-4 pl-0">
+							<h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Sk. Amir Hamza</h2>
+							<div class="d-print-none aos-init aos-animate" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="asset/resume/Resume_Amir_Hamza.pdf" target="_blank">Download CV</a></div>
+						</div>
+					</div>
+				</div>
+				<div class="about-section pt-4 px-3 px-lg-4 mt-5">
+					<div class="row">
+						<div class="col-md-6">
+							<h2 class="h3 mb-3">About Me</h2>
+							<p>Hello i am Sk. Amir Hamza. A web application developer.</p>
+						</div>
+						<div class="col-md-5 offset-md-1">
+							<div class="row mt-2">
+								<div class="col-sm-4">
+									<div class="pb-1">Email</div>
+								</div>
+								<div class="col-sm-8">
+									<div class="pb-1 text-secondary">sk.amirhamza@gmail.com</div>
+								</div>
+								<div class="col-sm-4">
+									<div class="pb-1">Phone</div>
+								</div>
+								<div class="col-sm-8">
+									<div class="pb-1 text-secondary">+880777564786</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<hr class="d-print-none">
+				
+			</div>
+		</div>
+	</body>
+</html>
