Rename asset file to

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<title>Sk. Amir Hamza</title>
-		<link rel="stylesheet" type="text/css" href="asset/css/style.css">
-		<script type="text/javascript" src="asset/js/script.js"></script>
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<script type="text/javascript" src="assets/js/script.js"></script>
 		<style type="text/css">
 			body{
-  				background-image: url("asset/img/bg.png");
+  				background-image: url("assets/img/bg.png");
 			}
 		</style>
 	</head>
