--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<div class="cover-bg p-3 p-lg-4 text-white" style="height: 200px;">
 					<div class="row">
 						<div class="col-lg-4 col-md-5">
-							<div class="pl-4 pt-1"><img class="img-thumbnail" style="border-radius: 100%" src="asset/img/hamza.jpeg" width="220" height="220"></div>
+							<div class="pl-4 pt-1"><img class="img-thumbnail" style="border-radius: 100%" src="assets/img/hamza.jpeg" width="220" height="220"></div>
 						</div>
 						<div class="col-lg-8 col-md-7 text-md-start pt-4 pl-0">
 							<h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Sk. Amir Hamza</h2>
