--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 					<div class="row">
 						<div class="col-md-6">
 							<h2 class="h3 mb-3">About Me</h2>
-							<p>Hello i am Sk. Amir Hamza. A web application developer.</p>
+							<p>
+								Hi! I’m Sk. Amir Hamza working as an Associate software engineer at Streams Tech Ltd., specializing in Laravel for CoderOJ and C# development for GeoSWMM 2D flood modeling. Founder of CoderOJ, a prominent online judge platform hosting 15+ intra-university contests. ACM ICPC veteran and Competitive Programming Trainer. My expertise spans C#, MVVM, MVP, MVC, Laravel, PHP, MySQL, Postgresql, AWS, Azure, CI/CD, Bash, competitive programming, algorithm design, and online judge platforms. Let's connect and explore innovative solutions together!
+							</p>
 						</div>
 						<div class="col-md-5 offset-md-1">
 							<div class="row mt-2">
